# ubuntu-touch-sdl2-gles2-template

./: CMakeLists.txt  how_to_build_sdl_for_ubuntu_phone.txt  manifest.json.in  sdl2-gles2-template.desktop
cmake/: Click.cmake
include/: CMakeLists.txt
include/SDL2/: SDL_config.h  SDL_revision.h
lib/: CMakeLists.txt
lib/arm-linux-gnueabihf/: CMakeLists.txt  libSDL2.la  libSDL2.lai
src/: main.c
